--- a/plugin.video.meta/resources/language/English/strings.po
+++ b/plugin.video.meta/resources/language/English/strings.po
@@ -27,6 +27,10 @@ msgctxt "#30012"
 msgid "Install from URL"
 msgstr ""
 
+msgctxt "#30020"
+msgid "Enable all players"
+msgstr ""
+
 msgctxt "#30100"
 msgid "Movies"
 msgstr ""
@@ -43,6 +47,10 @@ msgctxt "#30121"
 msgid "Preferred movie player from library"
 msgstr ""
 
+msgctxt "#30122"
+msgid "Preferred movie player from contextmenu"
+msgstr ""
+
 msgctxt "#30200"
 msgid "TV Shows"
 msgstr ""
@@ -57,6 +65,10 @@ msgstr ""
 
 msgctxt "#30211"
 msgid "Preferred TV player from library"
+msgstr ""
+
+msgctxt "#30212"
+msgid "Preferred TV player from contextmenu"
 msgstr ""
 
 msgctxt "#30300"
@@ -124,7 +136,7 @@ msgid "Genres"
 msgstr ""
 
 msgctxt "#30602"
-msgid "Select stream..."
+msgid "Context player"
 msgstr ""
 
 msgctxt "#30603"
@@ -248,8 +260,7 @@ msgid "Add all to library"
 msgstr ""
 
 msgctxt "#30419"
-msgid ""
-"Are you sure you want to add your entire Trakt collection to Kodi library?"
+msgid "Are you sure you want to add your entire Trakt collection to Kodi library?"
 msgstr ""
 
 msgctxt "#30420"
@@ -257,8 +268,7 @@ msgid "Trakt collection"
 msgstr ""
 
 msgctxt "#30421"
-msgid ""
-"Are you sure you want to add your entire Trakt watchlist to Kodi library?"
+msgid "Are you sure you want to add your entire Trakt watchlist to Kodi library?"
 msgstr ""
 
 msgctxt "#30422"
@@ -274,11 +284,11 @@ msgid "Live"
 msgstr ""
 
 msgctxt "#30501"
-msgid "Enable Live Players"
+msgid "Enable live players"
 msgstr ""
 
 msgctxt "#30510"
-msgid "Prefered Live Player"
+msgid "Preferred live player"
 msgstr ""
 
 msgctxt "#30001"
